# power-supply-control

./: .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md  build.rs  renovate.json
.github/workflows/: rust.yml
MX100QP/: .gitignore  MX100QP.ino  flash.sh
assets/: main.css
src/: config.rs  line_codec.rs  main.rs  mx100qp.rs
src/components/: add_device.rs  app.rs  channel.rs  channel_delay.rs  config_selector.rs  edit_mode.rs  editable_text.rs  input_unit.rs  mod.rs  modal.rs  power_supply.rs
