[package]
name = "power-supply-control"
version = "0.0.0"
authors = ["Daniel Trnka <daniel.trnka@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
serialport = "4.3.0"
toml = "0.8.12"
serde_derive = "1.0.201"
serde = { version = "1.0.201", features = ["derive"] }
log = "0.4.21"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["time"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
bytes = "1.6.0"
manganis = "0.2.2"
dirs = "5.0.1"
dioxus-desktop = "0.5.1"
log4rs = "1.3.0"
log-panics = { version = "2", features = ["with-backtrace"]}
anyhow = "1.0.83"
iconify = "0.3.1"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
anyhow = "1.0.83"
