[package]
name = "power-supply-control"
version = "0.0.0"
authors = ["Daniel Trnka <daniel.trnka@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.3", features = ["desktop", "router"] }

# Debug
tracing = "0.1.43"
dioxus-logger = "0.6.2"
serialport = "4.8.1"
serde_derive = "1.0.228"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["time"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
bytes = "1.11.0"
manganis = "0.6.2"
dirs = "6.0.0"
dioxus-desktop = "0.6.3"
log4rs = "1.4.0"
log-panics = { version = "2", features = ["with-backtrace"]}
anyhow = "1.0.100"
iconify = "0.3.1"
serde_json = "1.0.145"
int-enum = "1.2.0"

[build-dependencies]
vergen-gitcl = "1.0.8"
anyhow = "1.0.100"
image = "0.25.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png", "ico"] }
